<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.project.view.CreateProjectFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/create_project_btn"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_project_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:maxLength="50"
            android:elevation="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/create_project_name_hint" />

        <EditText
            android:id="@+id/project_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_gray"
            android:padding="10dp"
            android:elevation="5dp"
            android:gravity="top"
            android:maxLength="100"
            android:hint="@string/create_project_desc_hint"
            android:inputType="text|textMultiLine"
            android:minHeight="150dp" />
    </LinearLayout>

    <Button
        android:id="@+id/create_project_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/create_project_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>