<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.view.CreateTaskFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/create_task_btn"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/create_task_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_task_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:elevation="5dp"
                android:maxLength="50"
                android:hint="@string/create_task_name_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:elevation="5dp"
                android:gravity="top"
                android:hint="@string/create_task_desc_hint"
                android:inputType="text|textMultiLine"
                android:maxLength="2000"
                android:minHeight="500dp"
                android:padding="10dp" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/create_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        android:paddingVertical="15dp"
        android:text="@string/create_task_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>