<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".ui.task.view.TaskDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/edit_task_btn"
                android:textSize="24sp"
                tools:text="Project Name" />

            <Button
                android:id="@+id/edit_task_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/edit_task_btn" />
        </RelativeLayout>

        <TextView
            android:id="@+id/created_date"
            android:textSize="18sp"
            tools:text="Created At: 12-06-2022 12:35"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/task_status"
            android:textSize="18sp"
            tools:text="Status: NEW"
            android:textColor="@color/purple_500"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/task_description"
            android:textSize="18sp"
            tools:text="Task Description in 2000 characters."
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_task_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:enabled="false"
                android:layout_marginTop="15dp"
                android:text="@string/submit_task_btn" />

        </RelativeLayout>

        <TextView
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:text="@string/comment_label_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:hint="@string/comment_user_name_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/comment_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:gravity="top"
                android:hint="@string/comment_body_hint"
                android:inputType="text|textMultiLine"
                android:maxLength="1000"
                android:minHeight="100dp"
                android:padding="10dp" />

            <Button
                android:id="@+id/post_bomment_btn"
                android:text="@string/comment_post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_below="@id/comment_body"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>